.provarCaches/00D410000011HE0EAM/objects/rstk__cyclecount__c.object
<CustomObject>
    <description>cyclecount__c</description>
    <fields>
        <fullName>rstk__cyclecount_abc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ABC</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__cyclecount_itemdesc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__cyclecount_itemno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__cyclecount_lastcountdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Last Count Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__cyclecount_locid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__cyclecount_locnum__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Location No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__cyclecount_lotno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Lot No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__cyclecount_proj__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Project</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__cyclecount_qty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__cyclecount_serialno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Serial No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__cyclecount_site__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Site</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__cyclecount_totalamt__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__cyclecount_totalqty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Total Qty</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>ZZ Cycle Count</label>
    <nameField>
        <label>ZZ Cycle Count Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZZ Cycle Count</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>